spacing fixes

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -413,11 +413,14 @@ background: radial-gradient(circle, rgba(13,32,53,1) 36%, rgba(25,110,171,0.9990
 }
 
 .custom404 {
+  padding: 3rem;
   font-size: 2rem;
   width: 70%;
+  margin: 0 auto;
 }
 
 .contactContainer {
+  padding: 3rem;
 }
 
 .breakoutSection {
